--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "typescript": "^5"
   },
   "dependencies": {
-    "@venok/core": "^2.0.0",
-    "@venok/http": "^2.0.0",
-    "@venok/integration": "^2.0.0",
+    "@venok/core": "^2.0.1-next.1",
+    "@venok/http": "^2.0.1-next.1",
+    "@venok/integration": "^2.0.1-next.1",
     "elysia": "^1.4.18"
   }
 }
