--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "type": "module",
   "author": "Shiz Ceo",
   "license": "MIT",
-  "devDependencies": {
-    "@types/bun": "latest"
-  },
+  "eslintConfig": "eslint.config.ts",
   "peerDependencies": {
     "typescript": "^5"
   },
@@ -15,5 +13,17 @@
     "@venok/http": "^2.0.1-next.1",
     "@venok/integration": "^2.0.1-next.1",
     "elysia": "^1.4.18"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.39.1",
+    "@stylistic/eslint-plugin": "^5.6.1",
+    "@types/bun": "latest",
+    "@typescript-eslint/eslint-plugin": "^8.49.0",
+    "@typescript-eslint/parser": "^8.49.0",
+    "@typescript-eslint/utils": "^8.49.0",
+    "eslint": "^9.39.1",
+    "globals": "^16.5.0",
+    "jiti": "^2.6.1",
+    "typescript-eslint": "^8.49.0"
   }
 }
